# je2be-core

./: .clang-format  .cppcheck-suppress  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pvsconfig  CMakeLists.txt  Dockerfile  Makefile  README.md  build-deps.bat  fmt  ls-files  setup.bat  setup.sh
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml
cmake/: CPM.cmake  FindZLIB.cmake
example/: b2j.cpp  cli.cpp  dump.cpp  j2b.cpp  lce-progress.hpp  p2j.cpp  x2j.cpp
include/: je2be.hpp
include/je2be/: _data3d.hpp  _dimension-ext.hpp  _file.hpp  _fs.hpp  _java-level-dat.hpp  _nbt-ext.hpp  _poi-blocks.hpp  _props.hpp  _static-reversible-map.hpp  _version.hpp  _volume.hpp  algorithm.hpp  axolotl.hpp  biome-map.hpp  block-accessor.hpp  block-data.hpp  block-palette.hpp  block-property-accessor.hpp  chunk-data-package.hpp  chunk-data.hpp  converter.hpp  data3d.hpp  db.hpp  defer.hpp  deferred-db.hpp  dimension-data-fragment.hpp  dimension-ext.hpp  enchant-data.hpp  entity-attributes.hpp  entity.hpp  enums.hpp  errno.hpp  file.hpp  fireworks-explosion.hpp  fireworks.hpp  fs.hpp  future-support.hpp  height-map.hpp  integers.hpp  item.hpp  (+52 more)
src/: _algorithm.hpp  _closed-range.hpp  _data-version.hpp  _data2d.hpp  _data3d.hpp  _default-map.hpp  _dimension-ext.hpp  _directory-iterator.hpp  _file.hpp  _java-data-versions.hpp  _java-level-dat.hpp  _lattice-container-wrapper.hpp  _namespace.hpp  _nbt-ext.hpp  _parallel.hpp  _poi-blocks.hpp  _pos2i-set.hpp  _pos3.hpp  _props.hpp  _queue2d.hpp  _rename-pair.hpp  _rotation.hpp  _size.hpp  _static-reversible-map.hpp  _system.hpp  _volume.hpp  _walk.hpp  _xxhash.hpp  _zip-file.hpp  bedrock-block-data.cpp  bedrock-block-entity-before-components-introduced.hpp  bedrock-block-entity.cpp  bedrock-chunk.cpp  bedrock-context.cpp  bedrock-converter.cpp  bedrock-entity-before-components-introduced.hpp  bedrock-entity.cpp  bedrock-item-before-components-introduced.hpp  bedrock-item.cpp  bedrock-region.cpp  (+91 more)
src/bedrock/: _block-accessor-wrapper.hpp  _block-data.hpp  _block-entity-convert-result.hpp  _block-entity.hpp  _chunk.hpp  _constants.hpp  _context.hpp  _entity.hpp  _item.hpp  _legacy-block.hpp  _level-data.hpp  _map-info.hpp  _region.hpp  _structure-info.hpp  _sub-chunk.hpp  _world.hpp
src/block/: _door.hpp  _trial-spawner.hpp
src/box360/: _biome.hpp  _block-data.hpp  _chunk-decompressor.hpp  _chunk.hpp  _context.hpp  _entity.hpp  _grid.hpp  _lzx-decoder.hpp  _save-bin.hpp  _stfs.hpp  _terraform.hpp  _tile-entity.hpp  _world.hpp
src/color/: _lab.hpp  _rgba.hpp  _sign-color.hpp
src/command/: _command.hpp  _target-selector.hpp  _token.hpp
src/db/: _async-iterator.hpp  _concurrent-db.hpp  _db-interface.hpp  _db.hpp  _firewall-env.hpp  _null-db.hpp  _proxy-env.hpp  _raw-db.hpp  _readonly-db.hpp
src/entity/: _armor-stand.hpp  _axolotl.hpp  _boat.hpp  _cat.hpp  _effect.hpp  _entity-attributes.hpp  _frog.hpp  _painting.hpp  _panda.hpp  _tropical-fish.hpp  _wolf.hpp
src/enums/: _banner-color-code-bedrock.hpp  _chunk-conversion-mode.hpp  _color-code-java.hpp  _effect.hpp  _facing4.hpp  _facing6.hpp  _game-mode.hpp  _red-flower.hpp  _skull-type.hpp  _villager-profession.hpp  _villager-type.hpp
src/item/: _banner.hpp  _copper-golem-pose.hpp  _enchantments.hpp  _fireworks-explosion.hpp  _fireworks.hpp  _goat-horn.hpp  _map-color.hpp  _map-decoration.hpp  _map-type.hpp  _potion.hpp  _tipped-arrow-potion.hpp
src/java/: _axolotl.hpp  _biome-map-legacy.hpp  _block-data.hpp  _block-palette.hpp  _chunk-data-package.hpp  _chunk-data.hpp  _chunk.hpp  _components.hpp  _context.hpp  _datapacks.hpp  _enchant-data.hpp  _entity-store.hpp  _entity.hpp  _flat-world-layers.hpp  _height-map.hpp  _item.hpp  _java-edition-map.hpp  _level-data.hpp  _level.hpp  _lodestone-registrar.hpp  _map.hpp  _moving-piston.hpp  _player-abilities.hpp  _region.hpp  _session-lock.hpp  _sub-chunk.hpp  _tile-entity.hpp  _uuid-registrar.hpp  _versions.hpp  _world-data.hpp  _world.hpp
src/lce/: _attribute.hpp  _biome.hpp  _block-data.hpp  _chunk.hpp  _context.hpp  _entity.hpp  _grid.hpp  _item.hpp  _lzx-decoder.hpp  _savegame.hpp  _stfs-ext.hpp  _stfs.hpp  _terraform.hpp  _tile-entity-convert-result.hpp  _tile-entity.hpp  _world.hpp
src/ps3/: _behavior.hpp  _chunk-decompressor.hpp
src/structure/: _structure-piece.hpp
src/terraform/: _block-accessor.hpp  _block-property-accessor.hpp  _chorus-plant.hpp  _door.hpp  _fence-connectable.hpp  _leaves.hpp  _note-block.hpp  _redstone-wire.hpp  _shape-of-stairs.hpp  _snowy.hpp  _wall-connectable.hpp
src/tile-entity/: _beacon.hpp  _loot-table.hpp
src/tobe/: _axolotl.hpp  _biome-map-legacy.hpp  _block-data.hpp  _block-palette.hpp  _chunk-data-package.hpp  _chunk-data.hpp  _chunk.hpp  _context.hpp  _datapacks.hpp  _enchant-data.hpp  _entity-store.hpp  _entity.hpp  _flat-world-layers.hpp  _height-map.hpp  _item.hpp  _java-edition-map.hpp  _level-data.hpp  _level.hpp  _map.hpp  _player-abilities.hpp  _region.hpp  _session-lock.hpp  _sub-chunk.hpp  _tile-entity.hpp  _uuid-registrar.hpp  _versions.hpp  _world-data.hpp  _world.hpp
src/toje/: _block-accessor-wrapper.hpp  _block-data.hpp  _block-entity-convert-result.hpp  _block-entity.hpp  _chunk.hpp  _constants.hpp  _context.hpp  _entity.hpp  _item.hpp  _legacy-block.hpp  _level-data.hpp  _map-info.hpp  _region.hpp  _structure-info.hpp  _sub-chunk.hpp  (+1 more)
test/: CheckTag.hpp  b2j2b.test.hpp  bedrock-legacy-block.test.hpp  bee-nest.test.hpp  block-data.cpp  block-data.test.cpp  block-data.test.hpp  command.test.cpp  command.test.hpp  converter.test.cpp  end-gateway.test.hpp  j2b2j.cpp  j2b2j.hpp  j2b2j.test.cpp  j2b2j.test.hpp  je2be-all.hpp  lighting.test.hpp  loot-table.test.hpp  loot_table.test.hpp  main.cpp  moving-piston.test.cpp  moving-piston.test.hpp  on-memory-db.hpp  parallel.test.hpp  pos2i-set.test.hpp  research.cpp  research.hpp  shoulder-riders.test.hpp  strings.test.hpp  system.test.hpp  toje-legacy-block.test.hpp  uuid.test.hpp  volume.test.hpp
tool/: cppcheck.sh  format  git-restore-mtime-bare  git-restore-mtime.sh  ls-files  update-cmakelists
(+60335 files in other folders)
